section header correction de z-index du branding qui a ete supprimer pour et placer directement sur .banner

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -162,10 +162,7 @@ a {
   justify-content: space-around;
   align-items: baseline;
   padding: 1.6em 0;
-}
-
-.branding {
-  z-index: 2;
+  z-index: 9999;
 }
 
 /*---------------------------------------------------------------------------*\
