--- a/style/sass/layout/_header.scss
+++ b/style/sass/layout/_header.scss
@@ -10,13 +10,8 @@
   display: flex;
   justify-content: space-around;
   align-items: baseline;
-  padding: 1.6em 0; 
-}
-
-
-
-.branding {
-  z-index: 2;
+  padding: 1.6em 0;
+  z-index: 9999;
 }
 
 
